user controll of collapse states

--- a/static/index.html
+++ b/static/index.html
@@ -33,6 +33,20 @@ limitations under the License.
       <div id="plush-jobs"></div>
       <div id="screen"><div>
         <div id="scrollback">
+          <div class="job proto">
+            <div class="view-controls">
+              <ul class="horiz-menu">
+                <li><button class="view-hide">∅</button></li>
+                <li><button class="view-line">▂</button></li>
+                <li><button class="view-page">▅</button></li>
+                <li><button class="view-full">▇</button></li>
+              </ul>
+            </div>
+            <pre class="stdin"></pre>
+            <div class="output-container output-page">
+              <pre class="output"></pre>
+            </div>
+          </div>
         </div>
         <div id="input-area">
           <span id="prompt"># </span><input id="commandline" /><br>
