per job input fields, w/redimentary input controls

--- a/static/index.html
+++ b/static/index.html
@@ -42,9 +42,19 @@ limitations under the License.
                 <li><button class="view-full">▇</button></li>
               </ul>
             </div>
-            <pre class="stdin"></pre>
+            <pre class="command"></pre>
             <div class="output-container output-page">
               <pre class="output"></pre>
+            </div>
+            <div class="input-container">
+              <div class="input-controls">
+                <ul class="horiz-menu">
+                  <li><button class="send-eof"><small>EOF</small></button></li>
+                  <li><button class="send-sigint">^C</button></li>
+                  <li><button class="send-sigquit">☢</button></li>
+                </ul>
+              </div>
+              <input />
             </div>
           </div>
         </div>
