--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,7 @@ limitations under the License.
             <div class="view-controls">
               <ul class="horiz-menu">
                 <li><button class="view-hide">∅</button></li>
-                <li><button class="view-line">▂</button></li>
+                <li><button class="view-tiny">▂</button></li>
                 <li><button class="view-page">▅</button></li>
                 <li><button class="view-full">▇</button></li>
               </ul>
