send signals to midground processes from input bar

--- a/static/index.html
+++ b/static/index.html
@@ -50,8 +50,9 @@ limitations under the License.
               <div class="input-controls">
                 <ul class="horiz-menu">
                   <li><button class="send-eof"><small>EOF</small></button></li>
-                  <li><button class="send-sigint">^C</button></li>
-                  <li><button class="send-sigquit">☢</button></li>
+                  <li><button class="send-sigint" title="interrupt (2)">^C</button></li>
+                  <li><button class="send-sigquit" title="quit (3)">☢</button></li>
+                  <li><button class="send-sigkill" title="kill (9)">⌧</button></li>
                 </ul>
               </div>
               <input />
