using proto snippets for cwd

--- a/static/index.html
+++ b/static/index.html
@@ -67,7 +67,7 @@ limitations under the License.
     </div>
     <div id="context">
       <ul class="left">
-        <li><a href="#"><span id="context-cwd"></span></a></li>
+        <li><ol id="context-cwd"><li class="cwd-item proto"><a href="#"></a></li><li class="cwd-subs proto"><input></input></li></ol></li>
       </ul>
       <ul class="right">
         <li id="context-vars">
