front end of history
server API for getting history output
deferred loading of output for history commands

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@ limitations under the License.
                 <li><button class="view-tiny" title="view tiny">▂</button></li>
                 <li><button class="view-page" title="view page">▅</button></li>
                 <li><button class="view-full" title="view full">▇</button></li>
+                <li><button class="view-deferred" title="fetch output">...load...</button></li>
               </ul>
             </div>
             <pre class="command"></pre>
