--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,39 @@ limitations under the License.
       </div>
     </div>
     <div id="main">
+      <div id="status">
+        <div id="status-ls">
+          <h1 id="status-ls-cwd">/</h1>
+          <table>
+            <tbody>
+              <tr class="file proto">
+                <td>
+                  <span class="name"></span>
+                  <div class="hidden">
+                    <dl class="details">
+                      <dt class="type key">Type</dt><dd class="type value"></dd>
+                      <dt class="size key">Size</dt><dd class="size value"></dd>
+                      <dt class="info key">Info</dt><dd class="info value"></dd>
+                      <dt class="owner key">Owner</dt><dd class="owner value"></dd>
+                      <dt class="group key">Group</dt><dd class="group value"></dd>
+                      <dt class="time key">Time</dt><dd class="time value"></dd>
+                      <dt class="perms key">Perms</dt>
+                        <dd class="perms value">
+                          <code class="owner" title="Owner"></code>
+                          <code class="group" title="Group"></code>
+                          <code class="other" title="Other"></code>
+                          <code class="alt" title= "Alternate Access Method"></code>
+                        </dd>
+                      <dt class="links key">Link Count</dt><dd class="links value"></dd>
+                      <dt class="target key">Target</dt><dd class="target value"></dd>
+                    </dl>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
       <div id="plush-jobs"></div>
       <div id="screen"><div>
         <div id="scrollback">
