completions implemented as an input mode
fixes known problems with tab completion
still not perfect, but in a much better shape to support improvements

--- a/static/help.html
+++ b/static/help.html
@@ -36,21 +36,21 @@ limitations under the License.
           <dl>
             <dt><small>RETURN</small></dt>
             <dd>run command line</dd>
+          </dl>
+          <h2>Completion</h2>
+          <dl>
             <dt><small>TAB</small></dt>
             <dd>start completion</dd>
-          </dl>
-          <h2>Navigation</h2>
-          <dl>
-            <dt>↑ <i>or</i> <small>ALT</small> + ↑</dt>
-            <dd>prior job</dd>
-            <dt>↓ <i>or</i> <small>ALT</small> + ↓</dt>
-            <dd>later job</dd>
-            <dt><small>ALT</small> + ←</dt>
-            <dd>focus on command line</dd>
-            <dt><small>ALT</small> + →</dt>
-            <dd>focus on current job</dd>
-            <dt><small>RETURN</small></dt>
-            <dd>when focused on prior job, reenter job into command line</dd>
+            <dt>↓ <i>or</i> <small>TAB</small></dt>
+            <dd>next completion</dd>
+            <dt>↑ <i>or</i> <small>ALT</small> + <small>TAB</small></dt>
+            <dd>prior completion</dd>
+            <dt><small>RETURN</small> <i>or typing</i></dt>
+            <dd>accept completion</dd>
+            <dt>=</dt>
+            <dd>enter all completions</dd>
+            <dt><small>ESC</small></dt>
+            <dd>cancel completion</dd>
           </dl>
           <h2>History</h2>
           <dl>
@@ -73,6 +73,19 @@ limitations under the License.
           </dl>
         </td>
         <td>
+          <h2>Navigation</h2>
+          <dl>
+            <dt>↑ <i>or</i> <small>ALT</small> + ↑</dt>
+            <dd>prior job</dd>
+            <dt>↓ <i>or</i> <small>ALT</small> + ↓</dt>
+            <dd>later job</dd>
+            <dt><small>ALT</small> + ←</dt>
+            <dd>focus on command line</dd>
+            <dt><small>ALT</small> + →</dt>
+            <dd>focus on current job</dd>
+            <dt><small>RETURN</small></dt>
+            <dd>when focused on prior job, reenter job into command line</dd>
+          </dl>
           <h2>Current Job</h2>
           <dl>
             <dt><small>PAGE DOWN</small> <i>|</i> <small>PAGE UP</small></dt>
