many small css tweaks
added little chair logo to header
made status ls pane scroll if it is too talk
made status ls pane directory header wrap if too long
made command lines wrap if too long
improved layout of view sizing buttons (in particular, ...load... button now left aligned)

--- a/static/index.html
+++ b/static/index.html
@@ -68,11 +68,7 @@ limitations under the License.
           <div class="job proto">
             <div class="view-controls">
               <ul class="horiz-menu">
-                <li><button class="view-hide" title="hide">∅</button></li>
-                <li><button class="view-tiny" title="view tiny">▂</button></li>
-                <li><button class="view-page" title="view page">▅</button></li>
-                <li><button class="view-full" title="view full">▇</button></li>
-                <li><button class="view-deferred" title="fetch output">...load...</button></li>
+                <li><button class="view-hide" title="hide">∅</button></li><li><button class="view-tiny" title="view tiny">▂</button></li><li><button class="view-page" title="view page">▅</button></li><li><button class="view-full" title="view full">▇</button></li><li><button class="view-deferred" title="fetch output">...load...</button></li>
               </ul>
             </div>
             <pre class="command"></pre>
@@ -82,10 +78,7 @@ limitations under the License.
             <div class="input-container">
               <div class="input-controls">
                 <ul class="horiz-menu">
-                  <li><button class="send-eof"><small>EOF</small></button></li>
-                  <li><button class="send-sigint" title="interrupt (2)">^C</button></li>
-                  <li><button class="send-sigquit" title="quit (3)">☢</button></li>
-                  <li><button class="send-sigkill" title="kill (9)">⌧</button></li>
+                  <li><button class="send-eof"><small>EOF</small></button></li><li><button class="send-sigint" title="interrupt (2)">^C</button></li><li><button class="send-sigquit" title="quit (3)">☢</button></li><li><button class="send-sigkill" title="kill (9)">⌧</button></li>
                 </ul>
               </div>
               <input />
