user name and host name in upper left
oooo and a shiny extensible framework for adding other launch-time info!

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,11 @@ limitations under the License.
   <body>
     <div id="header">
       <h1>Plush <small>– the comfy shell</small></h1>
-      <div id="plush-man-search">
+      <div id="header-info">
+        <p><small>logged in as</small>
+              <span class="info" data-cmd="logname">-</span>
+           <small>on</small>
+              <span class="info" data-cmd="uname -n">-</span>
       </div>
     </div>
     <div id="main">
