speed up entry/exit to history search by making history be a separate div

--- a/static/index.html
+++ b/static/index.html
@@ -114,6 +114,11 @@ limitations under the License.
             </div>
           </div>
         </div>
+        <div id="history">
+          <div class="item proto">
+            <pre class="command"></pre>
+          </div>
+        </div>
         <div id="input-area">
           <span id="prompt"># </span><input id="commandline" /><br>
           <div id="annotations"></div>
