--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,7 @@ limitations under the License.
 -->
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <script data-main="js/main" src="js/libs/require/require.js"></script>
     <meta charset="utf-8">
     <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
