history search improvements
get historical items in the right order (were backwards now that we're adding in recent-to-past order)
elide duplicates during substring matches
show duplicate counts

--- a/static/index.html
+++ b/static/index.html
@@ -116,7 +116,7 @@ limitations under the License.
         </div>
         <div id="history">
           <div class="item proto">
-            <pre class="command"></pre>
+            <pre><span class="command"></span><span class="count"></span></pre>
           </div>
         </div>
         <div id="input-area">
