make build version info available
get git describe info into the version object
add version display to header

--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,9 @@ limitations under the License.
   </head>
   <body>
     <div id="header">
-      <h1>Plush <small>– the comfy shell</small></h1>
+      <h1>Plush <small>– the comfy shell</small>
+      <p class="info version" data-cmd="plush-version"></p>
+      </h1>
       <div id="header-info">
         <div><small>logged in as</small>
               <span class="info" data-cmd="logname">-</span>
