--- a/static/index.html
+++ b/static/index.html
@@ -122,7 +122,16 @@ limitations under the License.
           </div>
         </div>
         <div id="input-area">
-          <span id="prompt"># </span><input id="commandline" /><br>
+          <ul id="prompt-picker">
+            <li><a>$</a></li>
+            <li><a>¢</a></li>
+            <li><a>€</a></li>
+            <li><a>௹</a></li>
+            <li><a>#</a></li>
+            <li><a>⾙</a></li>
+            <li><a>♥</a></li>
+          </ul>
+          <span id="prompt">$</span><input id="commandline" /><br>
           <div id="annotations"></div>
         </div>
       </div></div>
