missing links: about / shortcuts / report bug
also, cleaned up code for the prompt-picker

--- a/static/index.html
+++ b/static/index.html
@@ -25,6 +25,11 @@ limitations under the License.
   </head>
   <body>
     <div id="header">
+      <div class="links">
+        <a href="http://code.google.com/p/plush" target="_blank">about</a>
+        <a id="show-help">shortcuts</a>
+        <a id="report-bug" href="http://code.google.com/p/plush/issues/entry?template=Defect%20report%20from%20plush" target="_blank">report bug</a>
+      </div>
       <h1>Plush <small>– the comfy shell</small>
       <p class="info version" data-cmd="plush-version"></p>
       </h1>
