--- a/static/index.html
+++ b/static/index.html
@@ -105,23 +105,18 @@ limitations under the License.
       <div id="plush-jobs"></div>
       <div id="screen"><div>
         <div id="scrollback">
-          <div class="job proto">
-            <div class="view-controls">
-              <ul class="horiz-menu">
+          <div class="job proto" tabindex="-1">
+            <div class="job-controls">
+              <ul class="view-controls horiz-menu">
                 <li><button class="view-hide" title="hide">∅</button></li><li><button class="view-tiny" title="view tiny">▂</button></li><li><button class="view-page" title="view page">▅</button></li><li><button class="view-full" title="view full">▇</button></li><li><button class="view-deferred" title="fetch output">...load...</button></li>
+              </ul>
+              <ul class="input-controls horiz-menu">
+                <li><button class="send-eof"><small>EOF</small></button></li><li><button class="send-sigint" title="interrupt (2)">^C</button></li><li><button class="send-sigquit" title="quit (3)">☢</button></li><li><button class="send-sigkill" title="kill (9)">⌧</button></li>
               </ul>
             </div>
             <pre class="command"></pre>
             <div class="output-container output-page">
               <pre class="output"></pre>
-            </div>
-            <div class="input-container">
-              <div class="input-controls">
-                <ul class="horiz-menu">
-                  <li><button class="send-eof"><small>EOF</small></button></li><li><button class="send-sigint" title="interrupt (2)">^C</button></li><li><button class="send-sigquit" title="quit (3)">☢</button></li><li><button class="send-sigkill" title="kill (9)">⌧</button></li>
-                </ul>
-              </div>
-              <input />
             </div>
           </div>
         </div>
